build: botão para conclusão

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <li>A Terra abriga vida por, aproximadamente, mais de 80% de sua existência.</li><br>
         </ol>
     </section>
+
+    <button onclick="cliquei()">Concluído</button>
     
     <script src="script.js"></script>
 </body>
