build: button:hover

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 class="text">A seguir temos algumas curiosidades fantásticas que você deveria saber.</h1>
 
     <img id="curiosidade" alt="Pessoas curiosas." src="img\curiosidade.jpg"><br>    
-    <a href="https://br.freepik.com/vetores-gratis/ilustracao-de-pessoas-planas-fazendo-perguntas_13448260.htm#fromView=image_search_similar&page=1&position=36&uuid=37dfef47-a91f-4b7b-81f4-c835f5ef8da3">Imagem de freepik</a><br>
+    <p>Imagem de freepik</p><br>
 
     <section class="section">    
         <ol class="text">
