build: novas curiosidades

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <li>Beijar um bebê na orelha pode deixá-lo surdo.</li><br>
             <li>A rotação da Terra está diminuindo gradualmente, ela roda 17 milissegundos mais devagar a cada 100 anos. O que isso quer dizer? Que nossos dias estão cada vez mais longos. No entanto, nem tanto assim, só conseguiríamos notar daqui 140 milhões de anos, quando um dia passaria a ter 25 horas.</li><br>
             <li>A Terra abriga vida por, aproximadamente, mais de 80% de sua existência.</li><br>
+            <li> Os cangurus não podem pular para trás.</li><br>
+            <li>Os bichos-preguiça, além de lentos, são muito ignorantes. Às vezes, confundem seus próprios braços com galhos e caem da árvore que estão empoleirados.</li><br>
+            <li>É fisicamente impossível para os porcos olharem para o céu.</li><br>
         </ol>
     </section>
 
