--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="C:\Users\DevMachine\Documents\dev\curiosidades\img\ico\favicon.png" type="image/x-icon">
+    <link rel="icon" href="img\ico\favicon.png" type="image/x-icon">
 
     <title>Sabia disso?</title>
 </head>
 <body>
+
+    <nav>
+        <ul>
+            <li><a href="pag/ciencias.html" target="_blank"> Ciências </a></li>
+            <li><a href="pag/animais.html" target="_blank"> Animais </a></li>
+            <li><a href="pag/natureza.html" target="_blank"> Natureza </a></li>
+        </ul>
+    </nav>
 
     <h1 class="text">A seguir temos algumas curiosidades fantásticas que você deveria saber.</h1>
 
