--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
 <body>
 
     <nav>
-      <h1>Logo</h1>
       <ul>
         <li><a href="pag/ciencias.html" target="_blank"> Ciências </a></li>
         <li><a href="pag/animais.html" target="_blank"> Animais </a></li>
         <li><a href="pag/natureza.html" target="_blank"> Natureza </a></li>
         </ul>
-    </nav>
+    </nav><hr>
     
     <div class="main">
     
-      <h1 class="text">A seguir temos algumas curiosidades fantásticas que você deveria saber.</h1>
+      <h1 class="text">A seguir temos algumas curiosidades fantásticas que você deveria saber.</h1><br>
 
       <img id="curiosidade" alt="Pessoas curiosas." src="img\curiosidade.jpg"><br>    
       <p>Imagem de freepik</p><br>
